--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.604b97ad.js"></script><link href="/static/css/main.afbec150.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>TestCanvasWegbl</title>
+  </head>
+  <body>
+    <div>
+      <button id="btn">渲染</button>
+      <p>Canvas draw webgl canvas</p>
+      <canvas id="cavs" style="width: 300px; height: 168px"></canvas>
+      <p>Canvas webgl raw</p>
+      <div id="mdiv"></div>
+    </div>
+    <script type="module">
+      import YUVCanvas from "./yuv-canvas.js";
+      const canvas = document.getElementById("cavs");
+      const myDiv = document.getElementById("mdiv");
+      const btn = document.getElementById("btn");
+      const renderImg = (data) => {
+        const w = 1024;
+        const h = 576;
+        const ctx = canvas.getContext("2d");
+        const tmp = YUVCanvas.draw(w, h, new Uint8Array(data));
+        const screenRatio = window.devicePixelRatio || 1;
+        canvas.width = Math.floor(300 * screenRatio);
+        canvas.height = Math.floor(168 * screenRatio);
+        ctx.save();
+        ctx.scale(screenRatio, screenRatio);
+        ctx.drawImage(tmp, 0, 0, w, h, 0, 0, 300, 168);
+        ctx.restore();
+
+        console.log(tmp);
+        myDiv.appendChild(tmp);
+      };
+
+      function btnClick() {
+        fetch("./raw2023111601.data", {
+          responseType: "arraybuffer",
+        })
+          .then((rest) => rest.arrayBuffer())
+          .then((data) => renderImg(data));
+      }
+
+      document.body.onload = () => {
+        document.getElementById("btn").onclick = btnClick;
+      };
+    </script>
+  </body>
+</html>
